--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -372,6 +372,8 @@
     <Content Include="Views\Payouts\List.cshtml" />
     <Content Include="Views\Payouts\PayoutsGrid.cshtml" />
     <Content Include="Views\Payouts\Summary.cshtml" />
+    <Content Include="Views\Payouts\SummaryGrid.cshtml" />
+    <Content Include="Views\Payouts\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
