disable MBA if can't verify

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -220,7 +220,7 @@
         <value>2012-07-01</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="TestUserIdentities" serializeAs="String">
         <value>directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</value>
