un-hardcode connection string in repositories (in progress)

--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DAMain1" connectionString="data source=biz2\da;initial catalog=DAMain1;user id=sa;password=sp0ngbOb" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
