--- a/1/EomTool/EomToolWeb/Web.Debug.config
+++ b/1/EomTool/EomToolWeb/Web.Debug.config
@@ -27,4 +27,6 @@
       </customErrors>
     -->
   </system.web>
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" xdt:Transform="SetAttributes">
+  </eomToolWeb>
 </configuration>
