--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -69,5 +69,5 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" />
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true" />
 </configuration>
