--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -18,6 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="EmailFromDefault" value="reporting@directagents.com" />
+    <add key="EmailToEOM" value="eom@directagents.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
