--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -206,6 +206,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Images\loading_lg.gif" />
     <Content Include="Scripts\jquery-1.7.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -364,21 +365,13 @@
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="packages.config" />
     <None Include="readme.txt" />
-    <Content Include="Views\Publishers\List.cshtml" />
-    <Content Include="Views\Payouts\List.cshtml" />
-    <Content Include="Views\Payouts\PayoutsGrid.cshtml" />
     <Content Include="Views\Payouts\Summary.cshtml" />
     <Content Include="Views\Payouts\SummaryGrid.cshtml" />
-    <Content Include="Views\Payouts\Details.cshtml" />
-    <Content Include="Views\Payouts\PublisherReport.cshtml" />
     <Content Include="Views\Batches\ShowNotes.cshtml" />
   </ItemGroup>
   <ItemGroup>
