--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\Cake.Data.Wsdl\packages.config" />
+  <repository path="..\..\CakeUtility\packages.config" />
+  <repository path="..\..\DirectAgents.Common\packages.config" />
+  <repository path="..\..\DirectAgents.Domain\packages.config" />
+  <repository path="..\..\DirectAgents.ETL\Cake.Data.Csv\packages.config" />
+  <repository path="..\..\DirectAgents.ETL\Cake.Data.Wsdl\packages.config" />
+  <repository path="..\..\DirectAgents.ETL\CakeUtility\packages.config" />
   <repository path="..\..\EomTool\EomApp1\packages.config" />
   <repository path="..\..\EomTool\EomTool.Domain\packages.config" />
   <repository path="..\..\EomTool\EomToolWeb.Tests\packages.config" />
