Added campaign fields

--- a/1/Cake.Model/App.Config
+++ b/1/Cake.Model/App.Config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings><add name="CakeEntities" connectionString="metadata=res://*/Cake.csdl|res://*/Cake.ssdl|res://*/Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="CakeEntities" connectionString="metadata=res://*/Cake.csdl|res://*/Cake.ssdl|res://*/Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
