--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -52,6 +52,15 @@
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Entities\Campaign.cs" />
     <Compile Include="Entities\Person.cs" />
+    <Compile Include="Migrations\201209120700454_InitialCreate.cs" />
+    <Compile Include="Migrations\201209120700454_InitialCreate.Designer.cs">
+      <DependentUpon>201209120700454_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201209121445521_FixCountrySpelling.cs" />
+    <Compile Include="Migrations\201209121445521_FixCountrySpelling.Designer.cs">
+      <DependentUpon>201209121445521_FixCountrySpelling.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +72,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201209120700454_InitialCreate.resx">
+      <DependentUpon>201209120700454_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201209121445521_FixCountrySpelling.resx">
+      <DependentUpon>201209121445521_FixCountrySpelling.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
