--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Models\AffiliatesListViewModel.cs" />
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\CampaignsByCountryViewModel.cs" />
+    <Compile Include="Models\CampaignViewModel.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\PayoutsListViewModel.cs" />
     <Compile Include="Models\PublisherSummaryViewModel.cs" />
