--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -11,6 +11,9 @@
   </configSections>
   <dataConfiguration defaultDatabase="DADatabaseR1Entities"/>
   <connectionStrings>
+    <add name="PetaPocoConnectionString"
+      connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
+      providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.DADatabaseR1ConnectionString"
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;User=sa;Password=sp0ngbOb"
       providerName="System.Data.SqlClient" />
@@ -227,4 +230,7 @@
       </setting>
     </EomApp1.Properties.Settings>
   </applicationSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
