--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Entities\Campaign.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\Vertical.cs" />
     <Compile Include="Migrations\201209131807451_StartOver.cs" />
     <Compile Include="Migrations\201209131807451_StartOver.Designer.cs">
       <DependentUpon>201209131807451_StartOver.cs</DependentUpon>
@@ -68,6 +69,10 @@
     <Compile Include="Migrations\201209132118115_RmCountryCodes.cs" />
     <Compile Include="Migrations\201209132118115_RmCountryCodes.Designer.cs">
       <DependentUpon>201209132118115_RmCountryCodes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201209170227499_addVertical.cs" />
+    <Compile Include="Migrations\201209170227499_addVertical.Designer.cs">
+      <DependentUpon>201209170227499_addVertical.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201209132118115_RmCountryCodes.resx">
       <DependentUpon>201209132118115_RmCountryCodes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201209170227499_addVertical.resx">
+      <DependentUpon>201209170227499_addVertical.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
