vertical filter (almost done)

--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -671,6 +671,49 @@
     <Content Include="Scripts\kendo\2012.2.710\kendo.validator.min.js" />
     <Content Include="Scripts\kendo\2012.2.710\kendo.web.min.js" />
     <Content Include="Scripts\kendo\2012.2.710\kendo.window.min.js" />
+    <Content Include="Scripts\kendo\styles\Black\editor.png" />
+    <Content Include="Scripts\kendo\styles\Black\imagebrowser.png" />
+    <Content Include="Scripts\kendo\styles\Black\loading-image.gif" />
+    <Content Include="Scripts\kendo\styles\Black\loading.gif" />
+    <Content Include="Scripts\kendo\styles\Black\slider-h.gif" />
+    <Content Include="Scripts\kendo\styles\Black\slider-v.gif" />
+    <Content Include="Scripts\kendo\styles\Black\sprite.png" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\editor.png" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\imagebrowser.png" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\loading-image.gif" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\loading.gif" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\slider-h.gif" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\slider-v.gif" />
+    <Content Include="Scripts\kendo\styles\BlueOpal\sprite.png" />
+    <Content Include="Scripts\kendo\styles\Default\editor.png" />
+    <Content Include="Scripts\kendo\styles\Default\imagebrowser.png" />
+    <Content Include="Scripts\kendo\styles\Default\loading-image.gif" />
+    <Content Include="Scripts\kendo\styles\Default\loading.gif" />
+    <Content Include="Scripts\kendo\styles\Default\slider-h.gif" />
+    <Content Include="Scripts\kendo\styles\Default\slider-v.gif" />
+    <Content Include="Scripts\kendo\styles\Default\sprite.png" />
+    <Content Include="Scripts\kendo\styles\kendo.black.min.css" />
+    <Content Include="Scripts\kendo\styles\kendo.blueopal.min.css" />
+    <Content Include="Scripts\kendo\styles\kendo.common.min.css" />
+    <Content Include="Scripts\kendo\styles\kendo.default.min.css" />
+    <Content Include="Scripts\kendo\styles\kendo.metro.min.css" />
+    <Content Include="Scripts\kendo\styles\kendo.silver.min.css" />
+    <Content Include="Scripts\kendo\styles\Metro\editor.png" />
+    <Content Include="Scripts\kendo\styles\Metro\imagebrowser.png" />
+    <Content Include="Scripts\kendo\styles\Metro\loading-image.gif" />
+    <Content Include="Scripts\kendo\styles\Metro\loading.gif" />
+    <Content Include="Scripts\kendo\styles\Metro\slider-h.gif" />
+    <Content Include="Scripts\kendo\styles\Metro\slider-v.gif" />
+    <Content Include="Scripts\kendo\styles\Metro\sprite.png" />
+    <Content Include="Scripts\kendo\styles\Silver\editor.png" />
+    <Content Include="Scripts\kendo\styles\Silver\imagebrowser.png" />
+    <Content Include="Scripts\kendo\styles\Silver\loading-image.gif" />
+    <Content Include="Scripts\kendo\styles\Silver\loading.gif" />
+    <Content Include="Scripts\kendo\styles\Silver\slider-h.gif" />
+    <Content Include="Scripts\kendo\styles\Silver\slider-v.gif" />
+    <Content Include="Scripts\kendo\styles\Silver\sprite.png" />
+    <Content Include="Scripts\kendo\styles\textures\glass.png" />
+    <Content Include="Scripts\kendo\styles\textures\highlight.png" />
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
