--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Concrete\CampaignRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Entities\Campaign.cs" />
+    <Compile Include="Entities\TrafficType.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Vertical.cs" />
@@ -73,6 +74,10 @@
     <Compile Include="Migrations\201209170529231_Vertical.cs" />
     <Compile Include="Migrations\201209170529231_Vertical.Designer.cs">
       <DependentUpon>201209170529231_Vertical.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201209171922380_TrafficType.cs" />
+    <Compile Include="Migrations\201209171922380_TrafficType.Designer.cs">
+      <DependentUpon>201209171922380_TrafficType.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -106,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201209170529231_Vertical.resx">
       <DependentUpon>201209170529231_Vertical.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201209171922380_TrafficType.resx">
+      <DependentUpon>201209171922380_TrafficType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
