--- a/1/Cake.Data.Wsdl/app.config
+++ b/1/Cake.Data.Wsdl/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <Cake.Data.Wsdl.Properties.Settings>
             <setting name="Cake_Data_Wsdl_ReportsService_reports" serializeAs="String">
-                <value>https://sandbox.cakemarketing.com/api/4/reports.asmx</value>
+                <value>https://login.directagents.com/api/4/reports.asmx</value>
             </setting>
         </Cake.Data.Wsdl.Properties.Settings>
     </applicationSettings>
