--- a/1/Cake.Data.Wsdl/Properties/Settings.settings
+++ b/1/Cake.Data.Wsdl/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Cake_Data_Wsdl_ReportsService_reports" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">https://sandbox.cakemarketing.com/api/4/reports.asmx</Value>
+      <Value Profile="(Default)">https://login.directagents.com/api/4/reports.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
