--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -83,6 +83,10 @@
     <Compile Include="Migrations\201209181555255_RmTrafficTypeNvarchar.Designer.cs">
       <DependentUpon>201209181555255_RmTrafficTypeNvarchar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201209191732527_FixCurrencyTypes.cs" />
+    <Compile Include="Migrations\201209191732527_FixCurrencyTypes.Designer.cs">
+      <DependentUpon>201209191732527_FixCurrencyTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -121,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201209181555255_RmTrafficTypeNvarchar.resx">
       <DependentUpon>201209181555255_RmTrafficTypeNvarchar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201209191732527_FixCurrencyTypes.resx">
+      <DependentUpon>201209191732527_FixCurrencyTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
