--- a/1/ApiClient/App.config
+++ b/1/ApiClient/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="CakeDbContext" connectionString="data source=.\sql2;initial catalog=Cake;Integrated Security=true; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <!--<add name="CakeContext" connectionString="data source=biz2\da;initial catalog=Cake2;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="CakeContext" connectionString="data source=biz2\da;initial catalog=Cake;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
